--- a/PZPullToRefresh-Sample/Base.lproj/Main.storyboard
+++ b/PZPullToRefresh-Sample/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <scene sceneID="84f-K1-ogE">
             <objects>
                 <navigationController id="zMh-Dn-370" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ipm-ww-mGC">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="Ipm-ww-mGC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -29,11 +29,11 @@
                         <viewControllerLayoutGuide type="bottom" id="ezr-Wp-nH9"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ris-P0-2ot">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="CdG-KQ-JOw">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
